BDOG-1826 Add NavBar and static asset to homepage

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,5 +1,20 @@
 @()
 
-@main("Welcome to Play") {
-  <h1>Welcome to Jonny's Web App!!</h1>
+@main("Jonny Home") {
+  <h1>Welcome to Jonny's Web App!</h1>
+  <p> I am building this (very) simple Web App to understand more about Scala and the Play Framework. <br>
+    <br>
+    Disclaimer: I have <b>never</b> touched HTML/CSS before...
+  </p>
+
+  <H2>Requirements:</H2>
+
+  <ol>
+    <li>Create the initial repository structure, initialise git and push to Github. </li>
+    <li>Create 3 HTML pages (and their associated routes + controllers). Also create a redirect just to see if it works. </li>
+    <li>Create a navigation bar using HTML/CSS</li>
+    <li>Add a static asset to homepage</li>
+
+  </ol>
+  <img src="@routes.Assets.versioned("images/scala.png")" alt="Scala Logo">
 }
