--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -11,15 +11,21 @@
     <head>
         @* Here's where we render the page title `String`. *@
         <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
+        <link rel="stylesheet" type="text/css" href="@routes.Assets.versioned("stylesheets/navigation.css")" />
 
     </head>
     <body>
         @* And here's where we render the `Html` object containing
          * the page content. *@
+        <nav class="menu">
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/pointless/redirect">Redirect to homepage for no real reason</a></li>
+                <li><a href="/form">Form</a></li>
+                <li><a href="/submissions">Submission Data</a></li>
+            </ul>
+        </nav>
         @content
-
       <script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
     </body>
 </html>
