--- a/app/views/form.scala.html
+++ b/app/views/form.scala.html
@@ -1,5 +1,13 @@
-@()
+@(dataForm: Form[DataModel])(implicit request: RequestHeader, messagesProvider: MessagesProvider)
 
-@main("About") {
-<h1>Welcome to Jonny's About page!!!</h1>
+@main("Form entry") {
+<h1>Welcome to Jonny's Form page!!!</h1>
+    @helper.form(action = routes.FormController.formPost()) {
+        @helper.CSRF.formField
+        @helper.inputText(dataForm("name"))
+        @helper.inputText(dataForm("age"))
+        @helper.inputText(dataForm("message"))
+
+        <input type="submit" value="Submit">
+    }
 }
