--- a/app/views/submissions.scala.html
+++ b/app/views/submissions.scala.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" href="@routes.Assets.versioned("stylesheets/table.css")" />
 <h1>This is where the data will be returned</h1>
 
-@helper.form(action = routes.FormController.submissions()) {
+@helper.form(action = routes.DataController.submissions()) {
     <input type="text" name="name" id="name">
     <input type="submit" value="filter">
 }
