BDOG-1826 First 2 stats

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -23,6 +23,7 @@
                 <li><a href="/pointless/redirect">Redirect to homepage for no real reason</a></li>
                 <li><a href="/form">Form</a></li>
                 <li><a href="/submissions">Submission Data</a></li>
+                <li><a href="/stats">Stats</a></li>
             </ul>
         </nav>
         @content
