BDOG-1826 Add boiler plate mongo pages

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -24,6 +24,9 @@
                 <li><a href="/form">Form</a></li>
                 <li><a href="/submissions">Submission Data</a></li>
                 <li><a href="/stats">Stats</a></li>
+                <li><a href="/mongo/form">Mongo Form</a></li>
+                <li><a href="/mongo/submissions">Mongo Submission Data</a></li>
+                <li><a href="/mongo/stats">Mongo Stats</a></li>
             </ul>
         </nav>
         @content
