--- a/app/views/mongoSubmissions.scala.html
+++ b/app/views/mongoSubmissions.scala.html
@@ -1,10 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Mongo Submissions</title>
-</head>
-<body>
+@(queryResult: Seq[MongoModel])
 
-</body>
-</html>
+@import viewHelpers.formatHelper
+
+@main("Welcome to Play") {
+
+<link rel="stylesheet" type="text/css" href="@routes.Assets.versioned("stylesheets/table.css")" />
+<h1>This is where the data will be returned</h1>
+
+@helper.form(action = routes.MongoDataController.submissions()) {
+<label for="name">Filter by name:</label><br><br>
+<input type="text" name="name" id="name"><br><br>
+<label for="age">Filter by age:</label><br><br>
+<input type="text" name="age" id="age"><br><br><br>
+<label for="message">Filter for messages containing:</label><br><br>
+<input type="text" name="message" id="message"><br><br><br>
+<input type="submit" value="Filter">
+}
+
+
+<table class="table">
+    <tr>
+        <th>Name</th>
+        <th>Age</th>
+        <th>Message</th>
+        <th>Time</th>
+        <th>Date</th>
+    </tr>
+    @for(entry <- queryResult) {
+    <tr>
+        <td>@entry.name</td>
+        <td>@entry.age</td>
+        <td>@entry.message</td>
+        <td>@viewHelpers.formatHelper.timeFormatter(entry.timestamp)</td>
+        <td>@viewHelpers.formatHelper.dateFormatter(entry.timestamp)</td>
+    </tr>
+    }
+</table>
+}
+
