BDOG-1826 basic formatting changes

--- a/app/views/mongoSubmissions.scala.html
+++ b/app/views/mongoSubmissions.scala.html
@@ -12,7 +12,7 @@
 <input type="text" name="name" id="name"><br><br>
 <label for="age">Filter by age:</label><br><br>
 <input type="text" name="age" id="age"><br><br><br>
-<label for="message">Filter for messages containing:</label><br><br>
+<label for="message">Filter by message:</label><br><br>
 <input type="text" name="message" id="message"><br><br><br>
 <input type="submit" value="Filter">
 }
