--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,19 +1,24 @@
 @()
 
 @main("Jonny Home") {
-  <h1>Welcome to Jonny's Web App!</h1>
-  <p> I am building this (very) simple Web App to understand more about Scala and the Play Framework. <br>
+  <h1 style="font-size:40px">Welcome to Jonny's Web App!</h1>
+  <p style="font-size:20px"> I am building this (very) simple Web App to understand more about Scala and the Play Framework. <br>
     <br>
     Disclaimer: I have <b>never</b> touched HTML/CSS before...
   </p>
 
-  <H2>Requirements:</H2>
+  <H2 style="font-size:30px">Requirements:</H2>
 
-  <ol>
+  <ol style="font-size:20px">
     <li>Create the initial repository structure, initialise git and push to Github. </li>
     <li>Create 3 HTML pages (and their associated routes + controllers). Also create a redirect just to see if it works. </li>
     <li>Create a navigation bar using HTML/CSS</li>
     <li>Add a static asset to homepage</li>
+    <li>Create a form which submits data to memory</li>
+    <li>Add constraints and validation to the form</li>
+    <li>Retrieve all data on the 'Submission Data' tab.</li>
+    <li>Add filters to the data retrieval, which can be combined or left blank</li>
+    <li>Add persistence to the webapp by using the hmrc-mongo wrapper</li>
   </ol>
   <img src="@routes.Assets.versioned("images/scala.png")" alt="Scala Logo">
 }
